--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@typescript-eslint/parser": "^5.51.0",
     "copyfiles": "^2.4.1",
     "eslint": "^8.19.0",
+    "eslint-auto-fix": "^1.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-filenames": "^1.3.2",
